stories/Organism/Blocks/FeaturedContentCard/FeaturedCard/featuredcard.scss
@import '../../../../assets/scss/variables';
@import '../../../../assets/scss/mixins';
@import '../../../../assets/scss/breakpoints';

/* featured-card container start */
.featured-card-container {
  .feature__card {
    &-title {
      display: block;
      margin-bottom: 2.25rem;

      @include devicebreak(medium) {
        margin-bottom: 0;
        margin-top: $spacing-32;
      }
    }

    &--large,
    &--medium {
      margin-bottom: 1.875rem;
    }

    &.without-image{
      .feature__card-image {
        display: none;
      }
    }
  }
}

[dir='rtl'] {
  .featured-card-container {
    .feature__card {
      &-title {
        @include devicebreak(medium) {
          margin-left: unset;
          margin-right: 5.25rem;
        }
      }
    }
  }
}

/* featured-card container end */

